--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.8.1",
+    "@nuxtjs/seo": "2.0.0-rc.23",
+    "@nuxtjs/sitemap": "^6.1.1",
     "echarts": "^5.5.1",
     "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.446.0",
     "mermaid": "^11.3.0",
-    "nuxt": "^3.13.0",
+    "nuxt": "^3.13.2",
     "primeicons": "^7.0.0",
-    "primevue": "^4.0.7",
+    "primevue": "^4.1.0",
     "vue": "latest",
     "vue-echarts": "^7.0.3",
     "vue-router": "latest"
@@ -26,7 +28,7 @@
   "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1",
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "@primevue/nuxt-module": "^4.0.7",
+    "@primevue/nuxt-module": "^4.1.0",
     "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.20",
     "nuxt-primevue": "^3.0.0",
