--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -14,9 +14,20 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
+
+      # Set up Node.js with pnpm and enable caching
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "pnpm"
+          package-manager: "pnpm"
+
       # Pick your own package manager and build script
-      - run: npm install
-      - run: npx nuxt build --preset github_pages
+      - run: pnpm install
+
+      # - run: npx nuxt build --preset github_pages
+      - run: pnpm exec nuxt build --preset github_pages
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
