--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-vue-next": "^0.446.0",
     "mermaid": "^11.3.0",
     "nuxt": "^3.13.2",
+    "nuxt-security": "^2.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
     "vue": "latest",
