--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "nuxt build && wrangler pages deploy ./dist"
   },
   "dependencies": {
     "@nuxt/content": "^2.13.4",
@@ -35,6 +36,7 @@
     "autoprefixer": "^10.4.20",
     "nuxt-primevue": "^3.0.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "wrangler": "^4.4.0"
   }
 }
