--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@kgierke/nuxt-matomo": "0.0.3",
     "@nuxt/content": "^2.13.4",
     "@nuxt/image": "^1.9.0",
     "@nuxt/scripts": "^0.9.5",
@@ -25,8 +26,7 @@
     "primevue": "^4.2.5",
     "vue": "^3.5.13",
     "vue-echarts": "^7.0.3",
-    "vue-router": "^4.5.0",
-    "vue-matomo": "4.2.0"
+    "vue-router": "^4.5.0"
   },
   "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1",
   "devDependencies": {
